# gke-anthos-hackhathon

./: .gitignore  ABOUT.md  Makefile  PROJECT.md  README.md  pyproject.toml
extras/postgres-hpa/helm-postgres-ha/: values.yaml
kubernetes-manifests/: anthos-mcp.yaml  config.yaml  contacts.yaml  cs-agent.yaml  db-poller.yaml  frontend.yaml  nats-subscriber.yaml  nats.yaml  promotion-agent.yaml  promotion-db.yaml  userservice.yaml
src/anthos-mcp/: Dockerfile  __init__.py  banking_tools.py  requirements.txt  server.py
src/cs-agent/: main.py  requirements.txt
src/cs-agent/cs-agent/: agent.py
src/db-poller/: Dockerfile  requirements.txt  simple_transaction_checker.py
src/ledger/balancereader/: pom.xml
src/ledger/ledgerwriter/: pom.xml
src/ledger/transactionhistory/: pom.xml
src/ledgermonolith/: pom.xml
src/promotion/agent/: main.py  pyproject.toml  requirements.txt
src/promotion/agent/promotion_agent/: __init__.py  agent.py  db.py  ledger_db.py
src/promotion/nats-subscriber/: Dockerfile  main.py  requirements.txt
src/promotion/promotion-db/: Dockerfile
src/promotion/promotion-db/initdb/: 0-promotion-schema.sql
